--- a/flaviagiustino.com.ar/404.html
+++ b/flaviagiustino.com.ar/404.html
@@ -14,12 +14,11 @@
   <meta name="keywords" content="diseño gráfico, branding, identidad, laboratorios, nougram, packaging, newsletter, diseño visual, identidad visual, diseño grafico, acuarela, watercolor, marcas, logos, logotipos, brochures, tipografia"/>
   <meta charset="utf-8">
   <title>Flavia Giustino / Diseñadora Gráfica</title>
-  <base href="/">
-
+  <base href="https://flaviagiustino.com.ar/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.svg">
-</head>
+<link rel="stylesheet" href="styles.0a94e3a4783c1b57b1d1.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="main.4dcadfb7803af24a15b4.js"></script></body>
 </html>
