--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,7 @@
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WDLQJD2KE7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-WDLQJD2KE7');
-  </script>
+  <script src="js/custom-gtag.js"></script>
   <meta name="description" content="Diseño gráfico - Identidad Visual - Packaging - Consultoria / Soy Diseñadora Gráfica independiente. Construyo la identidad de marcas amigables y simples. Creo contenido visual desde mi sensibilidad e intuición."/>
   <meta name="keywords" content="diseño gráfico, branding, identidad, laboratorios, nougram, packaging, newsletter, diseño visual, identidad visual, diseño grafico, acuarela, watercolor, marcas, logos, logotipos, brochures, tipografia"/>
   <meta charset="utf-8">
@@ -17,7 +11,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.svg">
+  <link rel="icon" href="images/app/favicon.svg">
 </head>
 <body>
   <app-root></app-root>
